--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html {
   scroll-padding-top: var(--header-height);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 body {
@@ -25,6 +26,11 @@ body {
   background-color: var(--white);
   background-image: var(--pattern-dots);
   background-size: 24px 24px;
+  overflow-x: hidden;
+  position: relative;
+}
+
+#root {
   overflow-x: hidden;
 }
 
